--- a/User/Cart/cartstylenew.css
+++ b/User/Cart/cartstylenew.css
@@ -2,7 +2,7 @@
 
 *{
 
- font-family: 'Comfortaa', cursive;
+font-family: 'Poppins', sans-serif;
 
  margin: 0;
 
@@ -128,9 +128,41 @@
 
 }
 
+.product-buy{
+
+    position: absolute;
+   
+    bottom: 20px;
+   
+    right: 175px;
+   
+    padding: 10px 25px;
+   
+    background-color: #4d4dff;
+   
+    color: white;
+   
+    cursor: pointer;
+   
+    border-radius: 5px;
+   
+   }
+   
+   .product-buy:hover{
+   
+    background-color: white;
+   
+    color: #4d4dff;
+   
+    font-weight: 600;
+   
+    border: 1px solid #4d4dff;
+   
+   }
+
 .product-quantity > input{
 
- width: 40px;
+ width: 60px;
 
  padding: 5px;
 
@@ -152,7 +184,7 @@
 
  padding: 20px;
 
- height: 240px;
+ height: 350px;
 
  border: 1px solid silver;
 
@@ -252,4 +284,16 @@
 
  }
 
+}
+
+.logo{
+    width: 10%;
+    height: 10%;
+    padding: 15px;
+    float: left; 
+}
+
+.heading{
+    text-align: center;
+    font-size: 50px;
 }
