--- a/User/Cart/paymentstyle.css
+++ b/User/Cart/paymentstyle.css
@@ -35,11 +35,13 @@
   }
   
   input[type=text] {
-    width: 100%;
+    width: 10%;
     margin-bottom: 20px;
-    padding: 12px;
+    padding: 6px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    text-align: left;
+  vertical-align: middle;
   }
   
   label {
@@ -55,7 +57,7 @@
   
   .btn {
     background-color: #04AA6D;
-    color: white;
+    color:white;
     padding: 12px;
     margin: 10px 0;
     border: none;
