--- a/User/product_management/new.css
+++ b/User/product_management/new.css
@@ -25,10 +25,10 @@
     border-bottom: 2px solid transparent;
 }
 #navbarSupportedContent a:hover{
-    border-bottom: 2px solid #f0e331;
+    border-bottom: 2px solid #ca8141;
 }
 #navbarSupportedContent button{
-    background: #f0e331;
+    background: #ca8141;
     width: 8rem;
     border-radius: 16px;
 }
@@ -43,11 +43,11 @@ section{
 /****Home*****/
 
 #home{
-    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),url(bg.jfif);
+    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),url(Images/dog1.jpg);
     background-image: image("dog1.jpg");
     background-size: cover;
     background-position: center;
-    flex-direction: column;
+    flex-direction: column; 
     margin-top: -50px;
 }
 #home h1{
@@ -111,32 +111,3 @@ section{
     transition: .2s;
 }
 
-/****Contact****/
-
-#contact img{
-    height: 100%;
-}
-.box{
-    width: 80% !important;
-    margin-top: 10px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-}
-#contact input{
-    margin: 10px 0px;
-}
-#contact textarea{
-    margin: 10px 0px;
-}
-
-footer{
-    width: 100%;
-    height: 30px;
-    background: rgba(0,0,0,.8);
-    margin-top: -30px;
-    text-align: center;
-    color: white;
-    padding: 3px;
-}
