--- a/Admin/eventmain.css
+++ b/Admin/eventmain.css
@@ -24,6 +24,7 @@ header{
 	right: 0;
 	z-index: 1000;
 	position: fixed;
+
 	background: var(--text-color);
 	box-shadow: 0px 2px 18px 0 rgb(129 162 182 / 20%);
 	display: flex;
@@ -37,6 +38,7 @@ header{
 	font-size: var(--main-font);
 	font-weight: 600;
 	line-height: 0.8;
+    left: 25%;
 }
 #menu-icon{
 	font-size: 38px;
@@ -59,6 +61,17 @@ header{
 .navbar a:hover{
 	background: var(--bg-color);
 	color: rgb(0, 0, 0);
+}
+.icons{
+	display: inline-block;
+}
+.icons i{
+	color: var(--text-color);
+	font-size: 24px;
+	margin-left: 15px;
+}
+.icons i:hover{
+	opacity: 0.7;
 }
 
 section{
@@ -95,6 +108,19 @@ section{
 	font-size: 14px;
 	letter-spacing: 1px;
 	margin-bottom: 20px;
+}
+.box .cart i{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 35px;
+	height: 35px;
+	background: var(--text-color);
+	color: var(--bg-color);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 18px;
 }
 .button {
 	display: inline-block;
@@ -133,3 +159,117 @@ section{
 	transform: translateY(-5px);
 }
 
+.about{
+	background: #f7f6f6;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+.about-content{
+	text-align: center;
+}
+.about-content h2{
+	font-size: var(--main-font);
+	margin-bottom: 30px;
+}
+.about-content p{
+	max-width: 600px;
+	font-size: var(--p-font);
+	font-weight: 600;
+	color: var(--text-color);
+	line-height: 30px;
+}
+
+.contact{
+	padding: 80px 17%;
+	background: var(--text-color);
+}
+.main-contact{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+	gap: 2rem;
+	margin-bottom: 3rem;
+}
+.contact-content li{
+	margin-bottom: 15px;
+}
+.contact-content li a{
+	display: block;
+	color: var(--bg-color);
+	font-size: var(--p-font);
+	font-weight: 600;
+	transition: all .40s ease;
+}
+.contact-content li a:hover{
+	transform: translateX(-10px);
+}
+.action form{
+	text-align: center;
+}
+.action form input[type="email"]{
+	width: 460px;
+	max-width: 100%;
+	padding: 12px 15px;
+	background: #515151;
+	color: var(--bg-color);
+	border: none;
+	outline: none;
+	margin: 0px 10px 20px 0px;
+	font-size: 16px;
+	font-weight: 600;
+}
+
+.action form input[type="submit"]{
+	padding: 10px 35px;
+	background: var(--bg-color);
+	color: var(--text-color);
+	border: none;
+	outline: none;
+	margin: 0px 10px 20px 0px;
+	font-size: 16px;
+	font-weight: 600;
+	cursor: pointer;
+}
+.last{
+	text-align: center;
+	padding: 17px;
+	background: #757575;
+}
+.last p{
+	color: var(--text-color);
+	font-size: 15px;
+	font-weight: 600;
+	letter-spacing: 2px;
+}
+
+@media (max-width: 800px){
+	#menu-icon{
+		display: block;
+	}
+	header{
+		padding: 15px 8%;
+	}
+	.navbar{
+		top: -500px;
+		left: 0;
+		right: 0;
+		position: absolute;
+		flex-direction: column;
+		background: var(--bg-color);
+		box-shadow: 0px 2px 18px 0 rgb(129 162 182 / 20%);
+		transition: all .40s ease;
+	}
+	.navbar a{
+		display: block;
+		padding: 1rem;
+		margin: 0.5rem;
+	}
+	.navbar.active{
+		top: 100%;
+	}
+}
+
+.logo1{
+    left: 25%;
+}
