--- a/Admin/add.css
+++ b/Admin/add.css
@@ -4,9 +4,12 @@
    --green:#27ae60;
    --black:#333;
    --white:#fff;
+   --bblack:#000000;
    --bg-color:#eee;
    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
    --border:.1rem solid var(--black);
+   background-image:url('https://us.123rf.com/450wm/kotofonya/kotofonya2103/kotofonya210300057/166272119-seamless-pattern-with-heads-of-different-breeds-dogs-corgi-pug-chihuahua-terrier-husky-pomeranian-te.jpg?ver=6');
+
 }
 
 *{
@@ -31,7 +34,7 @@ html{
    margin-top: 1rem;
    font-size: 1.7rem;
    padding:1rem 3rem;
-   background: var(--green);
+   background: var(--bblack);
    color:var(--white);
    text-align: center;
 }
@@ -89,4 +92,5 @@ html{
    background: var(--white);
    text-transform: none;
 }
+
 
