--- a/User/Cart/style.css
+++ b/User/Cart/style.css
@@ -1,209 +1,221 @@
- * {
-        margin: 0;
-        padding: 0;
-      }
-        
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-        padding-bottom:100%;
-      }
-        
-      .container {
-        height: 900px;
-        width: 400px;
-        background-image: linear-gradient(#080808, #0a0f0c);
-        top: 50%;
-        left: 50%;
-        position: absolute;
-        transform: translate(-50%, -50%);
-        position: absolute;
-        border-bottom-left-radius: 180px;
-        border-top-right-radius: 150px;
-      }
-        
-      .main-content {
-        height: 235px;
-        background-color: black;
-        border-bottom-left-radius: 90px;
-        border-bottom-right-radius: 80px;
-        border-top: black;
-      }
-        
-      .text {
-        text-align: center;
-        font-size: 300%;
-        text-decoration: aliceblue;
-        color: aliceblue;
-      }
-        
-      .course {
-        color: black;
-        font-size: 25px;
-        font-weight: bolder;
-      }
-        
-      .centre-content {
-        height: 180px;
-        margin: -70px 30px 20px;
-        color: aliceblue;
-        text-align: center;
-        font-size: 20px;
-        border-radius: 25px;
-        padding-top: 0.5px;
-        background-image: linear-gradient(#1e6b30, #308d46);
-      }
-        
-      .centre-content-h1 {
-        padding-top: 30px;
-        padding-bottom: 30px;
-        font-weight: normal;
-      }
-        
-      .price {
-        font-size: 60px;
-        margin-left: 5px;
-        bottom: 15px;
-        position: relative;
-      }
-        
-      .pay-now-btn {
-        cursor: pointer;
-        color: #fff;
-        height: 50px;
-        width: 290px;
-        border: none;
-        margin: 5px 30px;
-        background-color: rgb(71, 177, 61);
-        position: relative;
-      }
-        
-      .card-details {
-        background: rgb(8, 8, 8);
-        color: rgb(225, 223, 233);
-        margin: 10px 30px;
-        padding: 10px;
-        /* border-bottom-left-radius: 80px; */
-      }
-        
-      .card-details p {
-        font-size: 15px;
-      }
-        
-      .card-details label {
-        font-size: 15px;
-        line-height: 35px;
-      }
-        
-      .submit-now-btn {
-        cursor: pointer;
-        color: #fff;
-        height: 30px;
-        width: 240px;
-        border: none;
-        margin: 5px 30px;
-        background-color: rgb(71, 177, 61);
-      }
-      
-  }
-    
-  .container {
-    height: 900px;
-    width: 400px;
-    background-image: linear-gradient(#1e6b30, #308d46);
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    border-bottom-left-radius: 180px;
-    border-top-right-radius: 150px;
-  }
-    
-  .main-content {
-    height: 235px;
-    background-color: #1b9236;
-    border-bottom-left-radius: 90px;
-    border-bottom-right-radius: 80px;
-    border-top: #1e6b30;
-  }
-    
-  .text {
-    text-align: center;
-    font-size: 300%;
-    text-decoration: aliceblue;
-    color: aliceblue;
-  }
-    
-  .course {
-    color: black;
-    font-size: 25px;
-    font-weight: bolder;
-  }
-    
-  .centre-content {
-    height: 180px;
-    margin: -70px 30px 20px;
-    color: aliceblue;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 25px;
-    padding-top: 0.5px;
-    background-image: linear-gradient(#1e6b30, #308d46);
-  }
-    
-  .centre-content-h1 {
-    padding-top: 80px;
-    padding-bottom: 20px;
-    font-weight: normal;
-  }
-    
-  .price {
-    font-size: 60px;
-    margin-left: 5px;
-    bottom: 15px;
-    position: relative;
-  }
-    
-  .pay-now-btn {
-    cursor: pointer;
-    color: #fff;
-    height: 50px;
-    width: 290px;
-    border: none;
-    margin: 5px 30px;
-    background-color: rgb(71, 177, 61);
-    position: relative;
-  }
-    
-  .card-details {
-    background: rgb(7, 7, 7);
-    color: rgb(225, 223, 233);
-    margin: 10px 30px;
-    padding: 10px;
-    width: 25%;
-    position: absolute;
-    
-    /* border-bottom-left-radius: 80px; */
-  }
-    
-  .card-details p {
-    font-size: 15px;
-  }
-    
-  .card-details label {
-    font-size: 15px;
-    line-height: 35px;
-  }
-    
-  .submit-now-btn {
-    cursor: pointer;
-    color: #fff;
-    height: 30px;
-    width: 240px;
-    border: none;
-    margin: 5px 30px;
-    background-color: rgb(71, 177, 61);
-  }
-  
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
+body,html {
+  height:70%;
+  margin:10%;
+  font-family:lato;
+}
 
+
+
+h2 {
+  margin-bottom:0px;
+  margin-top:25px;
+  text-align:center;
+  font-weight:200;
+  font-size:19px;
+  font-size:1.2rem;
+  
+}
+.container {
+  height:90%;
+  -webkit-box-pack:center;
+  -webkit-justify-content:center;
+      -ms-flex-pack:center;
+          justify-content:center;
+  -webkit-box-align:center;
+  -webkit-align-items:center;
+      -ms-flex-align:center;
+          align-items:center;
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex;
+  
+}
+.dropdown-select.visible {
+  display:block;
+}
+.dropdown {
+  position:relative;
+}
+ul {
+  margin:0;
+  padding:0;
+}
+ul li {
+  list-style:none;
+  padding-left:10px;
+  cursor:pointer;
+}
+ul li:hover {
+  background:rgba(255,255,255,0.1);
+}
+.dropdown-select {
+  position:absolute;
+  background:#77aaee;
+  text-align:left;
+  box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
+  border-bottom-right-radius:5px;
+  border-bottom-left-radius:5px;
+  width:90%;
+  left:2px;
+  line-height:2em;
+  margin-top:2px;
+  box-sizing:border-box;
+}
+.thin {
+  font-weight:400;
+}
+.small {
+  font-size:12px;
+  font-size:.8rem;
+}
+.half-input-table {
+  border-collapse:collapse;
+  width:100%;
+}
+.half-input-table td:first-of-type {
+  border-right:10px solid #4488dd;
+  width:50%;
+}
+.full-width {
+  width:100%;
+}
+.pay-btn {
+  border:none;
+  background:#22b877;
+  line-height:2em;
+  border-radius:10px;
+  font-size:19px;
+  font-size:1.2rem;
+  color:#fff;
+  cursor:pointer;
+  position:absolute;
+  bottom:25px;
+  width:calc(100% - 50px);
+  -webkit-transition:all .2s ease;
+          transition:all .2s ease;
+}
+.pay-btn:hover {
+  background:#22a877;
+    color:#eee;
+  -webkit-transition:all .2s ease;
+          transition:all .2s ease;
+}
+.total {
+  margin-top:25px;
+  font-size:20px;
+  font-size:1.3rem;
+  position:absolute;
+  bottom:30px;
+  right:27px;
+  left:35px;
+}
+.dense {
+  line-height:1.2em;
+  font-size:16px;
+  font-size:1rem;
+}
+.input-field {
+  background:rgba(255,255,255,0.1);
+  margin-bottom:10px;
+  margin-top:3px;
+  line-height:1.5em;
+  font-size:20px;
+  font-size:1.3rem;
+  border:none;
+  padding:5px 10px 5px 10px;
+  color:#fff;
+  box-sizing:border-box;
+  width:100%;
+  margin-left:auto;
+  margin-right:auto;
+}
+.credit-info {
+  background:#4488dd;
+  height:100%;
+  width:50%;
+  color:#eee;
+  -webkit-box-pack:center;
+  -webkit-justify-content:center;
+      -ms-flex-pack:center;
+          justify-content:center;
+  font-size:14px;
+  font-size:.9rem;
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex;
+  box-sizing:border-box;
+  padding-left:25px;
+  padding-right:25px;
+  border-top-right-radius:30px;
+  border-bottom-right-radius:30px;
+  position:relative;
+}
+.dropdown-btn {
+  background:rgba(255,255,255,0.1);
+  width:100%;
+  border-radius:5px;
+  text-align:center;
+  line-height:1.5em;
+  cursor:pointer;
+  position:relative;
+  -webkit-transition:background .2s ease;
+          transition:background .2s ease;
+}
+.dropdown-btn:after {
+  content: '\25BE';
+  right:8px;
+  position:absolute;
+}
+.dropdown-btn:hover {
+  background:rgba(255,255,255,0.2);
+  -webkit-transition:background .2s ease;
+          transition:background .2s ease;
+}
+.dropdown-select {
+  display:none;
+}
+.credit-card-image {
+  display:block;
+  max-height:80px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:35px;
+  margin-bottom:15px;
+}
+.credit-info-content {
+  margin-top:25px;
+  -webkit-flex-flow:column;
+      -ms-flex-flow:column;
+          flex-flow:column;
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex;
+  width:100%;
+}
+@media (max-width: 600px) {
+  .window {
+    width: 100%;
+    height: 100%;
+    display:block;
+    border-radius:0px;
+  }
+  .order-info {
+    width:100%;
+    height:auto;
+    padding-bottom:100px;
+    border-radius:0px;
+  }
+  .credit-info {
+    width:100%;
+    height:auto;
+    padding-bottom:100px;
+    border-radius:0px;
+  }
+  .pay-btn {
+    border-radius:0px;
+  }
+}
