--- a/User/Signs/usrlgn.css
+++ b/User/Signs/usrlgn.css
@@ -1,8 +1,9 @@
 body{
     margin: 0;
     padding: 0;
+    margin-bottom: 10%;
     font-family: sans-serif;
-    background-image: url("dog1.jpg");
+    background-image: url("bernese-mountain-dog-gec385f1c9_1920.jpg");
     background-size: cover;
     background-position: center;
 }
